# extracting-script-from-youtube

./: main.py  output.json  pyproject.toml  result.json
.zed/: settings.json
app/: main.py
app/api/: extract_transcript.py  youtube_info.py
app/models/: file_io.py  transcriber.py
extract_wav/: extracting_url.py  link_list.json  qwen_omni.py  whisper.py
models/: main.py  model.py  transcriber.py  wav_extractor.py
