[project]
name = "sound-text-multimodal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "accelerate>=1.8.1",
    "datasets[audio]>=3.6.0",
    "qwen-omni-utils>=0.0.8",
    "ruff>=0.12.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers==4.52.3",
    "yt-dlp>=2025.6.30",
]
